# PlayIntegrityFix2

./: LICENSE  README.md  update.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  main.cpp  zygisk.hpp
app/src/main/java/es/chiteroman/playintegrityfix/: EntryPoint.java  ProxyKeyStoreSpi.java  ProxyProvider.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
